--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,4 @@ classifiers =
 [options.entry_points]
 console_scripts =
     branch-name-validator-hook = pre_commit_hooks.branch_name_validator_hook:main
+    docstring-checker = pre_commit_hooks.docstring_checker:main
